# TerriEngine

./: .gitignore  Cargo.toml  README.md  algo.js  bfs.rs  debug_bfs.rs  diff.txt  gameStatistics.js  game_results.json  hotkey_calculator.js  index.js  interest.js  old.js  old_opening.js  opening_data.json  opening_info.json  openings_data.json  package.json  pixel.js  processAction.js  simple_debug  simple_debug.rs  speed.js  test_engines.sh  time.js
data/: bfs_config.json  config.json  debug_bfs_config.json  ifs.json  simple_bfs_config.json  test_bfs_config.json
data/opening_data/: cycle5.txt
data/opening_data/v6_varieties/: 11968_11100.json  12322_10804.json
engine/: Cargo.toml  algo.js  algo.rs  config.rs  core.js  gameStatistics.js  game_statistics.rs  interest.js  interest.rs  main.rs  pixel.rs  processAction.js  process_action.rs  speed.js  speed.rs  time.js  time.rs
engine/src/: game_statistics.rs  interest.rs  lib.rs  pixel.rs  time.rs
examples/: bfs.js  opener.js
examples/data/bfs_data/: cycle1.json  cycle2.json  cycle3.json  cycle4.json  cycle5.json  cycle6.json  results.json
examples/deprecated/: old.js  opener.js
js/data/: config.json  results.json
js/data/bfs_data/: cycle1.json  cycle2.json  cycle3.json  cycle4.json  cycle5.json  cycle6.json
js/data/opening_data/: gbmp.json  v4.json
js/examples/deprecated/: opener.js
js/src/: core.js  interest.js  processAction.js  time.js
src/: algo.js  gameStatistics.js  interest.js  pixel.js  speed.js  time.js
