[package]
name = "terri_engine"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of TerriEngine for territorial.io opening simulation"

[[bin]]
name = "terri_engine"
path = "engine/main.rs"

[lib]
name = "terri_engine"
path = "engine/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
